// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductImages /> snapshots should match snapshot 1`] = `
<section
  aria-label="imagens do produto"
  class="styles__Container-sc-1rfz8de-0 cjexoL"
>
  <div
    class="styles__FeaturedImageContainer-sc-1rfz8de-1 hkalnS"
    data-testid="container-featured-image"
  >
    <img
      alt="product 1"
      class="styles__FeaturedImage-sc-1rfz8de-2 hLfEin"
      data-testid="featured-image"
      height="1000px"
      src="image-1.jpg"
      width="1000px"
    />
  </div>
  <div
    class="styles__ImagesGrid-sc-1rfz8de-3 gtpYQD"
  >
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl active"
      data-testid="grid-image-0"
    >
      <img
        alt="product 1"
        height="176px"
        src="thumbnail-1.jpg"
        width="176px"
      />
    </div>
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl"
      data-testid="grid-image-1"
    >
      <img
        alt="product 2"
        height="176px"
        src="thumbnail-2.jpg"
        width="176px"
      />
    </div>
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl"
      data-testid="grid-image-2"
    >
      <img
        alt="product 3"
        height="176px"
        src="thumbnail-3.jpg"
        width="176px"
      />
    </div>
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl"
      data-testid="grid-image-3"
    >
      <img
        alt="product 4"
        height="176px"
        src="thumbnail-4.jpg"
        width="176px"
      />
    </div>
  </div>
</section>
`;

exports[`<ProductImages /> snapshots should match snapshot when modal active 1`] = `
<section
  aria-label="imagens do produto"
  class="styles__Container-sc-1rfz8de-0 cjexoL"
>
  <div
    class="styles__FeaturedImageContainer-sc-1rfz8de-1 hkalnS"
    data-testid="container-featured-image"
  >
    <img
      alt="product 1"
      class="styles__FeaturedImage-sc-1rfz8de-2 hLfEin"
      data-testid="featured-image"
      height="1000px"
      src="image-1.jpg"
      width="1000px"
    />
    <div
      class="styles__ButtonWrapper-sc-1rfz8de-5 hFyXwb"
    >
      <button
        aria-label="imagem anterior"
        class="styles__ModalButton-sc-1rfz8de-6 styles__PreviousButton-sc-1rfz8de-7 bobShG kxWovx"
      >
        <icon-mock />
      </button>
      <button
        aria-label="próxima imagem"
        class="styles__ModalButton-sc-1rfz8de-6 styles__NextButton-sc-1rfz8de-8 bobShG gUtcMk"
      >
        <icon-mock />
      </button>
    </div>
  </div>
  <div
    class="styles__ImagesGrid-sc-1rfz8de-3 gtpYQD"
  >
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl active"
      data-testid="grid-image-0"
    >
      <img
        alt="product 1"
        height="176px"
        src="thumbnail-1.jpg"
        width="176px"
      />
    </div>
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl"
      data-testid="grid-image-1"
    >
      <img
        alt="product 2"
        height="176px"
        src="thumbnail-2.jpg"
        width="176px"
      />
    </div>
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl"
      data-testid="grid-image-2"
    >
      <img
        alt="product 3"
        height="176px"
        src="thumbnail-3.jpg"
        width="176px"
      />
    </div>
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl"
      data-testid="grid-image-3"
    >
      <img
        alt="product 4"
        height="176px"
        src="thumbnail-4.jpg"
        width="176px"
      />
    </div>
  </div>
</section>
`;

exports[`<ProductImages /> snapshots should match snapshot when modal active and small screen 1`] = `
<section
  aria-label="imagens do produto"
  class="styles__Container-sc-1rfz8de-0 cjexoL"
>
  <div
    class="styles__FeaturedImageContainer-sc-1rfz8de-1 hkalnS small"
    data-testid="container-featured-image"
  >
    <img
      alt="product 1"
      class="styles__FeaturedImage-sc-1rfz8de-2 hLfEin"
      data-testid="featured-image"
      height="1000px"
      src="image-1.jpg"
      width="1000px"
    />
    <div
      class="styles__ButtonWrapper-sc-1rfz8de-5 hFyXwb"
    >
      <button
        aria-label="imagem anterior"
        class="styles__ModalButton-sc-1rfz8de-6 styles__PreviousButton-sc-1rfz8de-7 bobShG kxWovx"
      >
        <icon-mock />
      </button>
      <button
        aria-label="próxima imagem"
        class="styles__ModalButton-sc-1rfz8de-6 styles__NextButton-sc-1rfz8de-8 bobShG gUtcMk"
      >
        <icon-mock />
      </button>
    </div>
  </div>
  <div
    class="styles__ImagesGrid-sc-1rfz8de-3 gtpYQD"
  >
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl active"
      data-testid="grid-image-0"
    >
      <img
        alt="product 1"
        height="176px"
        src="thumbnail-1.jpg"
        width="176px"
      />
    </div>
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl"
      data-testid="grid-image-1"
    >
      <img
        alt="product 2"
        height="176px"
        src="thumbnail-2.jpg"
        width="176px"
      />
    </div>
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl"
      data-testid="grid-image-2"
    >
      <img
        alt="product 3"
        height="176px"
        src="thumbnail-3.jpg"
        width="176px"
      />
    </div>
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl"
      data-testid="grid-image-3"
    >
      <img
        alt="product 4"
        height="176px"
        src="thumbnail-4.jpg"
        width="176px"
      />
    </div>
  </div>
</section>
`;

exports[`<ProductImages /> snapshots should match snapshot when small screen 1`] = `
<section
  aria-label="imagens do produto"
  class="styles__Container-sc-1rfz8de-0 cjexoL"
>
  <div
    class="styles__FeaturedImageContainer-sc-1rfz8de-1 hkalnS"
    data-testid="container-featured-image"
  >
    <img
      alt="product 1"
      class="styles__FeaturedImage-sc-1rfz8de-2 hLfEin"
      data-testid="featured-image"
      height="1000px"
      src="image-1.jpg"
      width="1000px"
    />
    <div
      class="styles__ButtonWrapper-sc-1rfz8de-5 hFyXwb"
    >
      <button
        aria-label="imagem anterior"
        class="styles__ModalButton-sc-1rfz8de-6 styles__PreviousButton-sc-1rfz8de-7 bobShG kxWovx"
      >
        <icon-mock />
      </button>
      <button
        aria-label="próxima imagem"
        class="styles__ModalButton-sc-1rfz8de-6 styles__NextButton-sc-1rfz8de-8 bobShG gUtcMk"
      >
        <icon-mock />
      </button>
    </div>
  </div>
  <div
    class="styles__ImagesGrid-sc-1rfz8de-3 gtpYQD"
  >
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl active"
      data-testid="grid-image-0"
    >
      <img
        alt="product 1"
        height="176px"
        src="thumbnail-1.jpg"
        width="176px"
      />
    </div>
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl"
      data-testid="grid-image-1"
    >
      <img
        alt="product 2"
        height="176px"
        src="thumbnail-2.jpg"
        width="176px"
      />
    </div>
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl"
      data-testid="grid-image-2"
    >
      <img
        alt="product 3"
        height="176px"
        src="thumbnail-3.jpg"
        width="176px"
      />
    </div>
    <div
      class="styles__Image-sc-1rfz8de-4 gGfERl"
      data-testid="grid-image-3"
    >
      <img
        alt="product 4"
        height="176px"
        src="thumbnail-4.jpg"
        width="176px"
      />
    </div>
  </div>
</section>
`;
